--- a/style.css
+++ b/style.css
@@ -101,6 +101,13 @@ header nav ul li a:hover {
 form {
   border: 2px solid #ff385c;
   padding: 10px;
+  display: flex;
+  flex-direction: column;
+}
+
+.stack {
+  display: flex;
+  justify-content: space-between;
 }
 
 form label {
@@ -136,7 +143,7 @@ footer p {
 
 /* -------  Media Query ------- */
 
-@media all and (min-width: 600px) {
+@media all and (min-width: 480px) {
   header {
     display: flex;
     justify-content: space-between;
